<?xml version="1.0"?>
<package format="2">
  <name>little_pig_rviz</name>
  <version>0.0.0</version>
  <description>The little_pig_rviz package</description>

  <maintainer email="coach@todo.todo">coach</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>little_pig_description</exec_depend>


  <export>
  </export>
</package>
